@@ -1,5 +1,5 @@
 Package: dbarts
-Version: 0.9-7
+Version: 0.9-8
 Date: 2018-12-18
 Title: Discrete Bayesian Additive Regression Trees Sampler
 Authors@R: c(person("Vincent", "Dorie",     role = c("aut", "cre"), email = "vdorie@gmail.com"),
