@@ -2,9 +2,10 @@
 #define HAVE_STDINT_H 1
 /* #define HAVE_ALLOCA_H 1 */
 #define STDC_HEADERS 1
+#define HAVE_LOG1P 1
 
 #define PACKAGE_BUGREPORT "vdorie@gmail.com"
 #define PACKAGE_NAME "dbarts"
-#define PACKAGE_STRING "dbarts 0.9.6"
+#define PACKAGE_STRING "dbarts 0.9.8"
 #define PACKAGE_TARNAME "dbarts"
-#define PACKAGE_VERSION "0.9.6"
+#define PACKAGE_VERSION "0.9.8"
