@@ -1,7 +1,7 @@
 \name{NEWS}
 \title{dbarts News}
 \encoding{UTF-8}
-\section{CHANGES IN VERSION 0.9-6}{
+\section{CHANGES IN VERSION 0.9-8}{
   \subsection{NEW FEATURES}{
     \itemize{
       \item \code{plot} now works for fits from \code{rbart_vi}.
@@ -20,6 +20,7 @@
       \item Fix for verbose multithreading on Linux, reported by @ignacio82 on github.
       \item General improvements to slice sampler in \code{rbart_vi} thanks to reports from Yutao Liu.
       \item \code{sampler$plotTree} now handles multiple chains correctly.
+      \item Negative log loss for \code{xbart} with binary outcomes should now be computed correctly.
     }
   }
 }
